kubernetes/cloud-run/hardened/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ycsec-hardened
  labels:
    ycsec.phase: cloud-remediation
    ycsec.security-state: hardened
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
